On results page overlay, replace text of orange button.

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -158,8 +158,8 @@
         <div class="number-of-questions">
             <h1>Answer questions here</h1>
         </div>
-        <div class="get-started">
-            <h1>Get started</h1>
+        <div class="continue">
+            <h1>Continue</h1>
         </div>
     </div>
 {% endblock %}
