--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -2568,13 +2568,14 @@ nav #search-suggest .menu a:hover, #search-suggest .menu li:hover {
    combine nav #search-suggest and #search-suggest items above, etc. */
 
 
-/* Note for IE 6-9 about Chrome Frame plug-in or other browsers */
+/* Styles for IE 6-9 browser compatibility prompts */
 
 #ie-note {
-    background: #000;
-    color: #fff;
+    background: #fff;
+    border-bottom: 4px solid #508e31;
+    color: #000;
     font-size: 14px;
-    padding: 16px 0;
+    padding: 11px 0;
     text-align: center;
     width: 100%;
 }
@@ -2583,15 +2584,23 @@ nav #search-suggest .menu a:hover, #search-suggest .menu li:hover {
     z-index: 2;
 }
 #ie-note a {
-    color: #fff;
     text-decoration: underline;
 }
 #ie-note img {
-    clip: rect(0px,255px,104px,0px);
+    clip: rect(0px,255px,108px,0px);
     overflow: hidden;
     position: absolute;
-    top: -24px;
+    top: -16px;
     z-index: 1;
     opacity: 0.5;
     filter:alpha(opacity=50); /* For IE8 and earlier */
 }
+
+.chromeFrameInstallDefaultStyle {
+	border: 4px solid #508e31;
+	border-top: 4px solid #fff;
+	height: 600px; /* not too short: don't allow blue button to scroll away */
+	top: 391px;
+	z-index: 20000;  /* ensure installer is atop all other content */
+}
+
