Since I lack a "Coming soon" graphic from the designers, I am fixing #22 by simply removing the getting-started video from the getting-started page for now (non-destructively: it is simply commented out in the Django template).

--- a/gobotany/simplekey/templates/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/simplekey/help_start.html
@@ -150,6 +150,7 @@
         class="onward-btn">Onward to the Simple Key</a>
 {% endblock %}
 
+{% comment %}
 {% block more_sidebar_content %}
     <div class="section">
         <h5>Watch Video:</h5>
@@ -167,4 +168,4 @@
         {% endif %}
     </div>
 {% endblock %}
-
+{% endcomment %}
