Partly fixed #19 by getting preview images working for videos that do exist.

--- a/gobotany/simplekey/templates/simplekey/help_video.html
+++ b/gobotany/simplekey/templates/simplekey/help_video.html
@@ -17,7 +17,11 @@
             <div class="video-topic">
                 <a rel="shadowbox;height=380;width=640;"
                   href="http://www.youtube.com/v/{{ video.youtube_id }}&amp;autoplay=1">
-                    <img class="shadow" src="http://img.youtube.com/vi/{{ video.youtube_id }}/hq2.jpg" alt="">
+                  {% if video.youtube_id %}
+                    <img class="shadow" src="http://img.youtube.com/vi/{{ video.youtube_id }}/0.jpg" alt="">
+                  {% else %}
+                    <img class="shadow" src="http://img.youtube.com/vi/" alt="">
+                  {% endif %}
                 </a>
                 <h4>{{ video.title }}</h4>
             </div>
