Fixed #21 by commenting out (instead of simply deleting, per request that the removal be "conditional?") the code that produced the dog-video link on the help_map.html page.

--- a/gobotany/simplekey/templates/simplekey/help_map.html
+++ b/gobotany/simplekey/templates/simplekey/help_map.html
@@ -80,6 +80,7 @@
     categories, but rather groupings of superficially similar plants that
     seem to belong together. The goal is to make identification easier.</p>
 
+    {% comment %}
     <p class="vid">
         <!-- TODO: Change YouTube ID to actual groups/subgroups video
                    clip when it becomes available -->
@@ -87,5 +88,6 @@
             href="http://www.youtube.com/v/VWDc9oyBj5Q&amp;autoplay=1">View a short video
             explaining plant groups and subgroups</a>
     </p>
+    {% endcomment %}
 </div>
 {% endblock %}
