Fixed #19 by adding a "Video not yet available" message when videos on the help/video/ page are missing. Per Sid, re-used the design and color of the missing-image message used on the 3rd-level search page.

--- a/gobotany/simplekey/templates/simplekey/help_video.html
+++ b/gobotany/simplekey/templates/simplekey/help_video.html
@@ -20,7 +20,9 @@
                   {% if video.youtube_id %}
                     <img class="shadow" src="http://img.youtube.com/vi/{{ video.youtube_id }}/0.jpg" alt="">
                   {% else %}
-                    <img class="shadow" src="http://img.youtube.com/vi/" alt="">
+                    <div class="missing-image">
+                      <p>Video not available yet</p>
+                    </div>
                   {% endif %}
                 </a>
                 <h4>{{ video.title }}</h4>
