Fixed #72 by replacing our old fragile method for graying out the text of invalid working-area choices with a more robust method that simply slaps a new "disabled" class on the whole choice <div>.

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1147,8 +1147,7 @@ but Dojo/Dijit transforms them into divs with ids starting with widget_. */
     float: left;
     margin: 3px 3px 0 -18px;
 }
-.choices .row div input[disabled='disabled'] + span,
-.choices .row div input[disabled='disabled'] + span + span {
+.choices .row div.disabled span {
     color: #aaa;
 }
 .choices .row div img {
