Fixed #53: the importer now understands that several lookalikes can exist for a species, and the species page now knows how to format them so that they do not all run together as a single paragraph.

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1771,6 +1771,11 @@ ul.full-description > li h5, ul.full-description > li div {
     display: inline;
 }
 
+#taxon #sidebar .lookalikes dt {
+    margin-top: 1em;
+    display: block;
+}
+
 #taxon #sidebar .get-help-btn {
 	margin: 0 0 0 10px;	
 }
