Fix up the images on the family and genus pages.
Because we never scheduled story work to fully finish these pages
before the first release, we are patching them up for now. The
images shown are the first two species images, because we do not
yet have 'example drawings' marked in the database. The images now
appear in the usual frame and can be enlarged in a lightbox.

--- a/gobotany/simplekey/templates/simplekey/family.html
+++ b/gobotany/simplekey/templates/simplekey/family.html
@@ -45,18 +45,16 @@ Family: {{ family.name }} {% if common_name %}({{ common_name }}){% endif %}
                 
                 <div class="pics">
                     {% for drawing in family_drawings %}
-                        <div>
-                            <a rel="shadowbox"
-                               href="{{ drawing.image_medium }}">
-                                <img class="map"
-                                    src="{{ drawing.thumb_small }}"
-                                    alt="{{ drawing.alt }}"></a>
-                            <p>{{ drawing.alt }}</p>
-                            <a class="enlarge" rel="shadowbox"
-                                href="{{ drawing.image_medium }}">
-                                <img class="zoom"
-                                src="/static/images/icons/zoom.png"
-                                alt="enlarge"></a>
+                        <div class="img-gallery">
+                            <div class="plant">
+                                <div class="frame"></div>
+                                <a href="{{ drawing.image_medium }}"
+                                    title="{% photo_credit drawing drawing.content_object.scientific_name %}">
+                                    <img class="map"
+                                        src="{{ drawing.thumb_large }}"
+                                        alt="{% photo_credit drawing drawing.content_object.scientific_name %}"></a>
+                                </a>
+                            </div>
                         </div>
                     {% endfor %}
                 </div>
