Fixes #59: About link in footer
Also took the opportunity to correct the other hardcoded links in the
footer to use the url template tag, if they're internal links.

--- a/gobotany/simplekey/templates/simplekey/_footer.html
+++ b/gobotany/simplekey/templates/simplekey/_footer.html
@@ -16,9 +16,9 @@
                     <p><a href="{% url simplekey %}"
                           >Simple Key</a> |
                         <a href="{% url plantshare-placeholder %}">PlantShare</a> |
-                        <a href="/advanced/">Advanced ID Tools</a> |
-                        <a href="/help/">About</a> |
-                        <a href="/help/glossary/">Glossary</a></p>
+                        <a href="{% url advanced-id-tools %}">Advanced ID Tools</a> |
+                        <a href="{% url simplekey-help-about %}">About</a> |
+                        <a href="{% url simplekey-help-glossary0 %}">Glossary</a></p>
                     <h6>Legal</h6>
                     <p><a href="{% url privacy-policy %}">Privacy Policy</a> |
                     <a href="{% url terms-of-use %}">Terms of Use</a></p>
