Fixes #60: Open NSF link in a new window or tab.

--- a/gobotany/simplekey/templates/simplekey/_footer.html
+++ b/gobotany/simplekey/templates/simplekey/_footer.html
@@ -29,7 +29,8 @@
                         alt="National Science Foundation" class="nsf-logo">
                     <p>The Go Botany project is supported in part by the 
                         National Science Foundation.<br><a
-                            href="http://www.nsf.gov">www.nsf.gov</a></p>
+                            href="http://www.nsf.gov"
+                            target="_blank">www.nsf.gov</a></p>
                     <div class="clearit"></div>
                 </div>
 
