Fixes #61: Incorrect back link on pilegroup page.
Since this small template is only ever used in one place, don't bother
with parsing the url or passing in context variables, just get the url
for the top level page.
Also remove the use of "piles_and_urls" and "parent_page" context
variables, which haven't been passed into this template in a while.

--- a/gobotany/simplekey/templates/simplekey/_plant_not_in_subgroup.html
+++ b/gobotany/simplekey/templates/simplekey/_plant_not_in_subgroup.html
@@ -1,11 +1,11 @@
                     <div class="not-my-plant">
                         <h6>My plant isn't in
-                            {% if piles_and_urls|length > 1 %}
+                            {% if piles|length > 1 %}
                                 these subgroups.
                             {% else %}
                                 this subgroup.
                             {% endif %}
                         </h6>
                         <a class="back-level"
-                            href="{{ parent_page.get_absolute_url }}">&laquo; Take me back a level.</a>
+                            href="{% url simplekey %}">&laquo; Take me back a level.</a>
                     </div>
