Add space below brief characteristics list to handle line wrap.
On species pages in the brief characteristics list, if the last
item wrapped to two lines it interfered with the Full
Characteristics link after it.

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1418,7 +1418,9 @@ div.working-area .actions {
 }
 
 /* Character/value styles, for plant preview popups, etc. */
-
+.characteristics {
+    margin-bottom: 16px;
+}
 .characteristics dl {
     border: 1px transparent; /* border forces new row in WebKit when
                               * char name, but not value, wraps */
