--- a/gobotany/simplekey/templates/simplekey/genus.html
+++ b/gobotany/simplekey/templates/simplekey/genus.html
@@ -32,14 +32,10 @@ Genus: {{ genus.name }} {% if common_name %}({{ common_name }}){% endif %}
                 <h2>Genus: <i>{{ genus.name }}</i></h2>
                 {% if common_name %}<h3>{{ common_name }}</h3>{% endif %}
                 <p class="description">
-                {% if item.description %}
-                    {{ item.description }}
+                {% if genus.description %}
+                    {{ genus.description }}
                 {% else %}
-                    TO DO: Add description in the database.
-                    This is a placeholder description.
-                    (Test glossary highlighting here with a few terms,
-                    such as abaxial, berry, creeping, fruit and
-                    perennial.)
+                    (Description Coming Soon)
                 {% endif %}
                 </p>
 
