Added "coming soon" text to Dichotomous Key
This closes the re-opened issue #12.

--- a/gobotany/simplekey/templates/simplekey/advanced.html
+++ b/gobotany/simplekey/templates/simplekey/advanced.html
@@ -37,7 +37,7 @@
                     </div><!-- Closes .dk-landing-section -->
                     <div class="landing-divider"></div>
                     <div class="dk-landing-section">
-                        <h4>Dichotomous Key to All 3500 New England Taxa</h4>
+                        <h4>Dichotomous Key to All 3500 New England Taxa (Coming Soon)</h4>
                         <section>
                             <p>If you are an experienced botanist, use our
                             Dichotomous Key tool!</p>
