--- a/gobotany/simplekey/templates/simplekey/help_about.html
+++ b/gobotany/simplekey/templates/simplekey/help_about.html
@@ -7,7 +7,16 @@
 {% block main_content %}
     <h2>About Go Botany</h2>
 
-        <h3>Go Botany toolkit</h3>
+		<h3>Contact Us</h3>
+		
+			<ul class="about">
+				<li>Would you like to find out more about the project? Report
+					a bug or erroneous data? We'd like to know! Send us an 
+					email at <a href="mailto:gobotany@newenglandwild.org">
+						gobotany@newenglandwild.org</a></li>
+			</ul>
+
+        <h3>Go Botany Toolkit</h3>
         
         <img class="margin" src="/static/images/layout/about_page_photo1.jpg" alt="" />
         
