--- a/gobotany/simplekey/templates/simplekey/genus.html
+++ b/gobotany/simplekey/templates/simplekey/genus.html
@@ -29,13 +29,14 @@ Genus: {{ genus.name }} {% if common_name %}({{ common_name }}){% endif %}
     <div class="content">
         <div class="container">
             <div id="main">
-                <h2>Genus: <i>{{ genus.name }}</i></h2>
-                {% if common_name %}<h3>{{ common_name }}</h3>{% endif %}
+                <h2>Genus: <i>{{ genus.name }}</i>
+                <span class="common">{% if common_name %}{{ common_name|lower }}{% endif %}</span>
+                </h2>
                 <p class="description">
                 {% if genus.description %}
                     {{ genus.description }}
                 {% else %}
-                    (Description Coming Soon)
+                    (Description coming soon)
                 {% endif %}
                 </p>
 
@@ -58,7 +59,7 @@ Genus: {{ genus.name }} {% if common_name %}({{ common_name }}){% endif %}
                 <h4>Family</h4>
                 <p class="family">
                     <a href="{% url simplekey-family genus.family.slug %}"
-                    >{{ genus.family.name }}{% if genus.family.common_name %} ({{ genus.family.common_name }}){% endif %}</a></p>
+                    >{{ genus.family.name }}{% if genus.family.common_name %} ({{ genus.family.common_name|cut:"The "|lower }}){% endif %}</a></p>
 
                 <h4>This Genus&#8217;s Species:</h4>
                 <ul class="species">
@@ -67,11 +68,6 @@ Genus: {{ genus.name }} {% if common_name %}({{ common_name }}){% endif %}
                     >{{ species.scientific_name }}</a></i></li>
                 {% endfor %}
                 </ul>
-
-                {# TODO: need genus-species button, like family-genera button #}
-                <a class="genus-species-btn"
-                    href="{% url simplekey-pile pilegroup.slug pile.slug %}#genus={{ genus.name }}">Key
-                    to this Genus&#8217;s Species</a>
 
             </div>
             <div id="sidebar" style="height: 634px;">
