Try to improve reliability of page loads by allowing a longer wait for JS.
Increase the RequireJS timeout from the default 7 seconds to a very long 90 seconds,
in an attempt to handle slower network speeds, especially on mobile devices.
Tested using a web debugging proxy set to throttle local network requests
to the speed of a 56 Kbps modem as an extreme example.

--- a/gobotany/simplekey/templates/simplekey/_new_base.html
+++ b/gobotany/simplekey/templates/simplekey/_new_base.html
@@ -51,7 +51,10 @@
         <script src="/static/scripts/require.js"></script>
         {# This block is for adding any page-specific JS. #}
         <script>
-            require.config({baseUrl: "/static/scripts"});
+            require.config({
+                baseUrl: "/static/scripts",
+                waitSeconds: 90
+            });
             {% block js_require %}{% endblock %}
         </script>
     </head>
