Change button text on plant preview popup.
Change 'Get More Info' to 'Go To Species Page.'

--- a/gobotany/simplekey/templates/simplekey/_results_modal_dialogs.html
+++ b/gobotany/simplekey/templates/simplekey/_results_modal_dialogs.html
@@ -44,7 +44,7 @@
 						<h4>Characteristics</h4>
 						<div class="characteristics">
                         </div>
-						<a class="get-more-info"></a>
+						<a class="go-to-species-page"></a>
 					</div>
 					<div class="clearit"></div>
 				</div>
