Swap the linked and unlinked colors in the About section left navigation.
This makes the linked items look like links (green) and the current, unlinked item
look unlinked, as is commonly done.

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -630,7 +630,7 @@ p.vid {
 #sidebar a.view-map-btn:active {
 	background-position: 0 -64px;
 }
-#sidebar a.sidebarlink[href] {
+#sidebar a.sidebarlink:not([href]) {
     color: #1a2e11;
 }
 #ne-dist-county-map {
